Fix the image alignment.

--- a/themes/nofancy-custom/static/css/custom.css
+++ b/themes/nofancy-custom/static/css/custom.css
@@ -167,6 +167,9 @@ h3 {
 .post-content img {
 	max-width: 100%;
 	height: auto;
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
 }
 
 .post a {
